--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "airi",
   "main": "dist/airi.js",
   "scripts": {
-    "start": "browserify lib/index.js -t babelify --outfile ./dist/airi.js"
+    "start": "watchify lib/index.js -t babelify --outfile ./dist/airi.js"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2017": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "babelify": "^7.3.0"
+    "babelify": "^7.3.0",
+    "watchify": "^3.7.0"
+  },
+  "dependencies": {
+    "axios": "^0.15.2",
+    "jsdom": "^9.8.3",
+    "rxjs": "^5.0.0-rc.4",
+    "underscore": "^1.8.3"
   }
 }
